# georgikon

./: CLAUDE.md  Cargo.toml  README.md  game.db
assets/: settings.ron
src/: camera.rs  chat.rs  db.rs  guild.rs  inventory.rs  main.rs  network.rs  player.rs  screens.rs  settings.rs  ui.rs  world.rs
src/audio/: fade.rs  mod.rs
src/client/: camera.rs  chat.rs  input.rs  mod.rs  player.rs  prediction.rs  reconciliation.rs  ui.rs  world.rs
src/common/: combat.rs  inventory.rs  mod.rs  social.rs  stats.rs
src/game/: dialogue.rs  mod.rs  mood.rs
src/net/: mod.rs
src/server/: authority.rs  chat.rs  db.rs  guild.rs  mod.rs  player_state.rs  sim.rs  trade.rs
