[package]
name = "georgikon"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "hdr",
    "ktx2",
    "multi_threaded",
    "png",
    "smaa_luts",
    "tonemapping_luts",
    "vorbis",
    "wayland",
    "x11",
    "zstd_rust",
] }
bevy_seedling = { version = "0.7", features = ["hrtf"] }
bevy_third_person_camera = "0.4.0"
clap = { version = "4.6.1", features = ["derive"] }
lightyear = { version = "0.26.4", features = ["netcode", "udp"] }
rand = "0.9"
reqwest = { version = "0.13.2", features = ["blocking", "form", "json", "query"] }
ron = "0.10"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Compile dependencies with optimizations in debug builds.
# Without this Bevy runs at ~5 fps in dev; with it, near release speed.
[profile.dev.package."*"]
opt-level = 3
