[package]
name = "georgikon"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter"] }
bevy = { version = "0.18.1", default-features = false, features = [
    "3d",
    "default_font",
    "hdr",
    "ktx2",
    "multi_threaded",
    "png",
    "smaa_luts",
    "tonemapping_luts",
    "vorbis",
    "wayland",
    "x11",
    "zstd_rust",
] }
bevy_seedling = { version = "0.7", features = ["hrtf"] }
#bevy_third_person_camera = "0.4.0"
clap = { version = "4.6.1", features = ["derive"] }
lightyear = { version = "0.26.4", features = ["netcode", "udp"] }
rand = "0.9"
reqwest = { version = "0.13.2", features = ["blocking", "form", "json", "query"] }
ron = "0.10"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Fast incremental compiles - optimized bevy only for playable framerate
[profile.dev.package.bevy]
opt-level = 3

[profile.dev.package.bevy_internal]
opt-level = 2

# All other deps use default (0)
[profile.dev]
opt-level = 0
debug = true
